--- a/webpageResp.html
+++ b/webpageResp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="responsive webpage using html and css.css">
+    <link rel="stylesheet" href="webpageResp.css">
     <title>My world</title>
 </head>
 
