--- a/webpageResp.html
+++ b/webpageResp.html
@@ -18,10 +18,10 @@
                 </div>
                 <div class="child child2">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#course">Services</a></li>
-                        <li><a href="#fot">About Us</a></li>
-                        <li><a href="#fot">Contact Us</a></li>
+                        <li id="list1"><a href="#">Home</a></li>
+                        <li id="list2"><a href="#course">Services</a></li>
+                        <li id="list3"><a href="#fot">About Us</a></li>
+                        <li id="list4"><a href="#fot">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
