--- a/index.html
+++ b/index.html
@@ -14,60 +14,94 @@
         <div class="main">
             <div class="contain">
                 <div class="child child1">
-                    <img src="https://play-lh.googleusercontent.com/mupi9KGMfvkGlFaXD6m4ePU-3378MaaAUj9dRYIXoQdCLz9a7LlQ9KztxChkfmywTfo=w240-h480-rw" alt="error">
+                    <img src="https://t4.ftcdn.net/jpg/03/03/86/31/240_F_303863101_AwU05jjNIhjtxO0KYOfVE6uGjFL8r0zr.jpg"
+                        alt="error">
                 </div>
                 <div class="child child2">
                     <ul>
                         <li id="list1"><a href="#">Home</a></li>
-                        <li id="list2"><a href="#course">Services</a></li>
-                        <li id="list4"><a href="#fot">Contact Us</a></li>
+                        <li id="list2"><a href="#about">About Me</a></li>
+                        <li id="list3"><a href="#course">Projects</a></li>
+                        <li id="list4"><a href="#contac">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
             <div class="content">
-                <h2 class="sam">Welcome To Coding Planet</h2>
-                <p class="sam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deleniti omnis libero ipsam labore obcaecati tempore veritatis consequatur sint ut. Delectus sed saepe vero aut iusto nobis eius magni molestias libero quas natus, eligendi voluptates fugit repellat. Odio nesciunt, cumque nam incidunt explicabo sed quos! Cupiditate beatae odit eos. sdfd ruiise seetet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, eum.</p>
-                
+                <h2 class="sam">Greetings! My name is</h2>
+                <h2 class="sam"><span id="nam">Sachin Maharjan</span></h2>
+                <h3 class="sam">I am a passionate</h3>
+                <h3 class="sam"><span id="element"></span></h3>
             </div>
         </div>
     </header>
     <section>
-        <h2 class="sect" id="course">Courses</h2>
+        <h2 class="sect" id="about">About Me</h2>
+        <div class="parent">
+            <div class="item box">
+                <div class="childbox childbox1">
+                    <img src="images/sachin.jpeg"></img>
+                </div>
+                <div class="childbox childbox2">
+                    <p>Hello! I am Sachin Maharjan, a detail oriented and organized coder residing in Imadol, Lalitpur.
+                        I am a highly motivated Full Stack Web Developer with expertise in creating dynamic and
+                        responsive web applications. I specialize in HTML, CSS, Bootstrap, ReactJS for the frontend, and
+                        Python Django for the backend.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2 class="sect" id="course">My Projects</h2>
         <div class="parent">
             <div class="item item1">
-                <h3>HTML</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum tempora ducimus ea debitis. Est suscipit maxime a eaque vel, dolore, voluptatem tenetur repudiandae accusantium modi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi tempore accusamus voluptatem a laboriosam fuga, nulla excepturi recusandae unde odio dolor eligendi illo maiores quae? Eum sed nemo magni mollitia aperiam, expedita placeat assumenda?</p>
+                <h3>Attendance System with Face Recognition</h3>
+                <p>Designed an Online Attendance System where users can register and login to the system based on their
+                    roles. This system captures real-time video through the user's camera, compares detected faces with
+                    a database of known faces, and records attendance in the database. Users can also view their profile
+                    or details along with their attendance history.</p>
+                <a href="https://github.com/sachinmhj/faceAttendance">Github Link</a>
             </div>
             <div class="item item2">
-                <h3>CSS</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum tempora ducimus ea debitis. Est suscipit maxime a eaque vel, dolore, voluptatem tenetur repudiandae accusantium modi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi tempore accusamus voluptatem a laboriosam fuga, nulla excepturi recusandae unde odio dolor eligendi illo maiores quae? Eum sed nemo magni mollitia aperiam, expedita placeat assumenda?</p>
+                <h3>Text Manipulation App</h3>
+                <p>Responsive Web Based Application using raw HTML/CSS along with React.js and JavaScript which allows
+                    users to manipulate texts in various ways like converting to lowercase/uppercase, display total
+                    words and total characters. The application also enables users to switch between a variety of
+                    alternative darkmode themes. It also includes a Quotes section where users can read quotes.</p>
+                <a href="https://sachinmhj.netlify.app/">Link</a>
             </div>
-            <div class="item item3"><h3>Bootstrap</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum tempora ducimus ea debitis. Est suscipit maxime a eaque vel, dolore, voluptatem tenetur repudiandae accusantium modi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi tempore accusamus voluptatem a laboriosam fuga, nulla excepturi recusandae unde odio dolor eligendi illo maiores quae? Eum sed nemo magni mollitia aperiam, expedita placeat assumenda?</p></div>
-            <div class="item item4"><h3>Javascript</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum tempora ducimus ea debitis. Est suscipit maxime a eaque vel, dolore, voluptatem tenetur repudiandae accusantium modi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi tempore accusamus voluptatem a laboriosam fuga, nulla excepturi recusandae unde odio dolor eligendi illo maiores quae? Eum sed nemo magni mollitia aperiam, expedita placeat assumenda?</p></div>
+            <div class="item item3">
+                <h3>Shopping and Blog Platform</h3>
+                <p>Responsive Shopping and Blog Site using Python, Django, JavaScript, HTML, CSS, Bootstrap where users
+                    can sign up, view products based on their categories and see their details whereas for Blog section
+                    users can view, click on a post to read more. Users can also like and share the posts on social
+                    media. users can navigate through different blog posts using next/previous buttons. They can also
+                    leave comments on posts using the facebook comments plugin.</p>
+                <a
+                    href="https://github.com/sachinmhj/blogAndShoppingDjango">Github Link</a>
+            </div>
+            <div class="item item4">
+                <h3>News App</h3>
+                <p>Responsive News Application using React.js, JavaScript, HTML, CSS, Bootstrap that allows users to
+                    read real time news articles. It includes a categorized section, allowing users to easily access
+                    news articles based on their preferred topics and interests.</p>
+                <a href="https://github.com/sachinmhj/NewzReact">Github Link</a>
+            </div>
         </div>
     </section>
     <footer>
-        <div class="footter" id="fot">
-            <div class="foot foot1">
-                <h4>Our Team</h4>
-                <p class="par">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro adipisci magnam aperiam quaerat harum autem rerum dolor molestias doloribus ut.</p>
-            </div>
-            <div class="foot foot2">
-                <h4>Contact</h4>
-                <p>Phone: 0155385677</p>
-                <p>Email: Myworld@gmail.com</p>
-            </div>
-            <div class="foot foot3">
-                <h4>Links</h4>
-                <p>Home</p>
-                <p>Features</p>
-                <p>Our Clients</p>
-            </div>
+        <div>
+            <h2 class="sect" id="contac">Contact Me</h2>
+            <p>Mobile Number: 9818868507</p>
+            <p>Email: scnmrsn9818@gmail.com</p>
         </div>
-        <p id="para">&copy; Copyright 2023 Sachinmhj. All rights reserved</p>
     </footer>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+        var typed = new Typed('#element', {
+            strings: ['Web Developer.', 'Programmer.'],
+            typeSpeed: 160,
+        });
+    </script>
 </body>
 
 </html>
